# os-scheduling-simulator

./: .gitignore  README.md  docker-compose.yml
backend/: advisor.py  main.py  pyproject.toml  schemas.py
backend/algorithms/: c_look.py  c_scan_disk.py  fcfs.py  fcfs_disk.py  fifo_pra.py  lfu.py  look_disk.py  lru_approx_pra.py  lru_pra.py  mfu.py  mvt.py  optimal_pra.py  priority_nonpree.py  priority_pree.py  round_robin.py  scan_disk.py  sjf_nonpree.py  sjf_pree.py  sstf_disk.py
backend/algorithms/cpu_scheduling/: fcfs.py  priority_nonpree.py  round_robin.py  sjf_nonpree.py  sjf_pree.py
backend/algorithms/mass_storage/: c_look.py  c_scan_disk.py  fcfs_disk.py  look_disk.py  scan_disk.py  sstf_disk.py
backend/algorithms/page_replacement/: fifo_pra.py  lfu.py  lru_approx_pra.py  lru_pra.py  mft.py  mfu.py  optimal_pra.py
backend/algorithms/virtual_memory/: mvt.py
frontend/: Dockerfile  app.py  chatbot.py  config.py  llm.py  pyproject.toml  requirements.txt
frontend/.streamlit/: config.toml
frontend/components/: gantt.py
models/: .gitkeep
packaging/: launcher.py  os_sim.spec
reference/: README.md  pyproject.toml
reference/backend/: main.py  schemas.py
reference/backend/algorithm/: fcfs.py
reference/frontend/: config.py  frontend.py  test_frontend.py
tests/: test_recommend.py
