[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "uvicorn>=0.47.0",
]

[tool.pytest.ini_options]
# Run from the backend/ dir: `python -m pytest`. pythonpath="." makes the
# backend modules (advisor, schemas, algorithms) importable; tests live at the
# repo root in ../tests.
pythonpath = ["."]
testpaths = ["../tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
